Fix illegal characters in request URL.
Square brackets were not being quoted.

--- a/.test-infra/jupyter/precommit_job_times.ipynb
+++ b/.test-infra/jupyter/precommit_job_times.ipynb
@@ -84,8 +84,10 @@
     "builds = []\n",
     "job_names = ['beam_PreCommit_Java_Cron', 'beam_PreCommit_Python_Cron', 'beam_PreCommit_Go_Cron']\n",
     "for job_name in job_names:\n",
-    "    url = 'https://builds.apache.org/job/%s/api/json?tree=%s[result,number,timestamp,actions[queuingDurationMillis,totalDurationMillis]]' % (job_name, builds_key)\n",
-    "    r = requests.get(url)\n",
+    "    url = 'https://builds.apache.org/job/%s/api/json' % job_name\n",
+    "    params = {\n",
+    "        'tree': '%s[result,number,timestamp,actions[queuingDurationMillis,totalDurationMillis]]' % builds_key}\n",
+    "    r = requests.get(url, params=params)\n",
     "    data = r.json()\n",
     "    builds.extend([Build(job_name, build_json)\n",
     "                         for build_json in data[builds_key]])\n",
@@ -162,7 +164,6 @@
     "    num_fetched = 0\n",
     "    for build_num in build_nums:\n",
     "        url = 'https://builds.apache.org/job/%s/%s/testReport/api/json?depth=1' % (job_name, build_num)\n",
-    "        #print(url)\n",
     "        print('.', end='')\n",
     "        r = requests.get(url)\n",
     "        if not r.ok:\n",
