--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -192,17 +192,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "alT-25VWonuu"
-      },
-      "source": [
-        "> ℹ️ Reading data from disks is [much slower](https://en.wikipedia.org/wiki/Memory_hierarchy) than internal memory.\n",
-        "> If the data is split into multiple files, and even different disks, the reads can be parallelized.\n",
-        "> Beam tries to do as much parallelization as possible to speed up reads."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "9-2wmzEWsdrb"
       },
       "source": [
@@ -270,17 +259,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IhR8RZvIpZN5"
-      },
-      "source": [
-        "> ℹ️ Writing large amounts of data to disk can be a bottleneck.\n",
-        "Beam takes advantage that there are no ordering guarantees in a `PCollection` and that it's able to write into one or _more_ files.\n",
-        "With large datasets, there could be multiple workers, each writing into its own independent file."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "21CCdZispqYK"
       },
       "source": [
@@ -290,7 +268,7 @@
         "[Built-in I/O Transforms](https://beam.apache.org/documentation/io/built-in)\n",
         "page for a list of all the available I/O transforms in Beam.\n",
         "\n",
-        "If none of those work for you, you might need to create your own source.\n",
+        "If none of those work for you, you might need to create your own input transform.\n",
         "\n",
         "> ℹ️ For a more in-depth guide, take a look at the\n",
         "[Developing a new I/O connector](https://beam.apache.org/documentation/io/developing-io-overview) page."
@@ -360,7 +338,7 @@
         "id": "G4fw7NE1RQNf"
       },
       "source": [
-        "## Creating a Source transform\n",
+        "## Creating an input transform\n",
         "\n",
         "For a nicer interface, we could abstract the `Create` and the `FlatMap` into a custom `PTransform`. This would give a more intuitive way to use it, while hiding the inner workings.\n",
         "\n",
@@ -368,7 +346,7 @@
         "[`staticmethod`](https://docs.python.org/3/library/functions.html#staticmethod).\n",
         "And we can hide the `Create` and `FlatMap` in the `expand` method.\n",
         "\n",
-        "Now we can use our transform in a more intuitive way, just like `ReadFromText` _source_ transform."
+        "Now we can use our transform in a more intuitive way, just like `ReadFromText`."
       ]
     },
     {
@@ -583,7 +561,7 @@
         "\n",
         "We can use a\n",
         "[custom `DoFn` transform](https://beam.apache.org/documentation/transforms/python/elementwise/pardo/#example-3-pardo-with-dofn-methods)\n",
-        "for this. It allows us to open and close resources like a database connection only _once_ per `DoFn` _instance_ by using the `setup` and `teardown` methods.\n",
+        "for this. It allows us to open and close resources, like the database connection, only _once_ per `DoFn` _instance_ by using the `setup` and `teardown` methods.\n",
         "\n",
         "> ℹ️ It should be safe to _read_ from a database with multiple concurrent processes using the same connection, but only one process should be _writing_ at once."
       ]
@@ -631,7 +609,6 @@
         "        | 'SQLite SELECT' >> beam.ParDo(SQLiteSelect(self.database_file))\n",
         "    )\n",
         "\n",
-        "# We're safe to send multiple queries.\n",
         "database_file = 'moon-phases.db'\n",
         "queries = [\n",
         "    # (table_name, [column1, column2, ...])\n",
@@ -685,7 +662,7 @@
         "[Built-in I/O Transforms](https://beam.apache.org/documentation/io/built-in)\n",
         "page for a list of all the available I/O transforms in Beam.\n",
         "\n",
-        "If none of those work for you, you might need to create your own sink.\n",
+        "If none of those work for you, you might need to create your own output transform.\n",
         "\n",
         "> ℹ️ For a more in-depth guide, take a look at the\n",
         "[Developing a new I/O connector](https://beam.apache.org/documentation/io/developing-io-overview) page."
@@ -697,15 +674,15 @@
         "id": "FpM368NEhc-q"
       },
       "source": [
-        "## Creating a Sink transform\n",
+        "## Creating an output transform\n",
         "\n",
         "The most straightforward way to write data would be to use a `Map` transform to write each element into our desired output format. In most cases, however, this would result in a lot of overhead creating, connecting to, and/or deleting resources.\n",
         "\n",
         "Most data services are optimized to load _batches_ of elements at a time. This only has to connect to the service once, and it can the load many elements at a time.\n",
         "\n",
-        "Here, we discuss two common ways of batching the elements for optimized writes: fixed-sized batches, and\n",
-        "[windows](https://beam.apache.org/documentation/programming-guide/#windowing)\n",
-        "of elements."
+        "Here, we discuss two common ways of batching the elements for optimized writes: _fixed-sized batches_, and\n",
+        "_[windows](https://beam.apache.org/documentation/programming-guide/#windowing)\n",
+        "of elements_."
       ]
     },
     {
@@ -722,9 +699,9 @@
         "[`GroupIntoBatches`](https://beam.apache.org/documentation/transforms/python/aggregation/groupintobatches)\n",
         "to get fixed-sized batches. Note that it expects `(key, value)` pairs. Since `GroupIntoBatches` is an _aggregation_, all the elements in a batch _must_ fit into memory for each worker.\n",
         "\n",
-        "> ℹ️ Since `GroupIntoBatches` requires a `(key, value)` pair, we key with `None` and discard it. Depending on your data, there might be a key that makes more senes. If you use a _balanced_ key (each key contains around the same number of elements), it might help in parallelizing the batching process.\n",
+        "> ℹ️ `GroupIntoBatches` requires a `(key, value)` pair, for simplicity we key with `None` and discard it. Depending on your data, there might be a key that makes more senes. If you use a _balanced_ key (each key contains around the same number of elements), it might help to parallelize the batching process.\n",
         "\n",
-        "Lets create something similar to `WriteToText`, but for simplicity, with a unique identifier in the file name instead of the file count."
+        "Lets create something similar to `WriteToText`, but to keep it simple, with a unique identifier in the file name instead of the file count."
       ]
     },
     {
@@ -752,7 +729,7 @@
         "        f.write(f\"{line}\\n\")\n",
         "\n",
         "  def expand(self, pcollection):\n",
-        "    # Remove existing files matching the pattern.\n",
+        "    # Remove existing files matching the output file_name pattern.\n",
         "    for f in glob.glob(f\"{self.file_name_prefix}*{self.file_name_suffix}\"):\n",
         "      os.remove(f)\n",
         "    return (\n",
@@ -778,10 +755,11 @@
         "          'There are no guarantees on the line order.',\n",
         "          'The data might be written into multiple files.',\n",
         "      ])\n",
-        "      | 'Write to files' >> WriteBatchesToFiles(\n",
+        "      | 'Write batches to files' >> WriteBatchesToFiles(\n",
         "          file_name_prefix,\n",
         "          file_name_suffix='.txt',\n",
-        "          batch_size=3)\n",
+        "          batch_size=3,\n",
+        "      )\n",
         "  )"
       ],
       "execution_count": null,
@@ -856,7 +834,7 @@
         "        'window_end': window.end.to_utc_datetime(),\n",
         "    }\n",
         "\n",
-        "class WriteSessionsToFiles(beam.PTransform):\n",
+        "class WriteWindowsToFiles(beam.PTransform):\n",
         "  def __init__(self, file_name_prefix, file_name_suffix):\n",
         "    self.file_name_prefix = file_name_prefix\n",
         "    self.file_name_suffix = file_name_suffix\n",
@@ -876,7 +854,7 @@
         "    return (\n",
         "        pcollection\n",
         "        | 'Group all per window' >> beam.GroupBy(lambda _: None)\n",
-        "        | 'Discard None key' >> beam.Values()\n",
+        "        | 'Discard key' >> beam.Values()\n",
         "        | 'Get window info' >> beam.ParDo(WithWindowInfo())\n",
         "        | 'Write files' >> beam.Map(\n",
         "            self.write_file,\n",
@@ -901,7 +879,7 @@
         "          lambda x: beam.window.TimestampedValue(x, x['timestamp']))\n",
         "      | 'Fixed-sized windows' >> beam.WindowInto(\n",
         "            beam.window.FixedWindows(window_size_sec))\n",
-        "      | WriteSessionsToFiles(\n",
+        "      | 'Write windows to files' >> WriteWindowsToFiles(\n",
         "          file_name_prefix,\n",
         "          file_name_suffix='.txt',\n",
         "      )\n",
@@ -951,9 +929,10 @@
       "source": [
         "# What's next?\n",
         "\n",
-        "* [Transform catalog](https://beam.apache.org/documentation/transforms/python/overview/) -- check out all the available transforms\n",
-        "* [Mobile gaming example](https://beam.apache.org/get-started/mobile-gaming-example/) -- learn more about windowing, triggers, and streaming through a complete example pipeline\n",
-        "* [Runners](https://beam.apache.org/documentation/runners/capability-matrix/) -- check the available runners, their capabilities, and how to run your pipeline in them"
+        "* [Programming guide](https://beam.apache.org/documentation/programming-guide) -- learn about all the Apache Beam concepts in more depth.\n",
+        "* [Transform catalog](https://beam.apache.org/documentation/transforms/python/overview) -- check out all the available transforms.\n",
+        "* [Mobile gaming example](https://beam.apache.org/get-started/mobile-gaming-example) -- learn more about windowing, triggers, and streaming through a complete example pipeline.\n",
+        "* [Runners](https://beam.apache.org/documentation/runners/capability-matrix) -- check the available runners, their capabilities, and how to run your pipeline in them."
       ]
     }
   ]
