--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -699,7 +699,7 @@
         "[`GroupIntoBatches`](https://beam.apache.org/documentation/transforms/python/aggregation/groupintobatches)\n",
         "to get fixed-sized batches. Note that it expects `(key, value)` pairs. Since `GroupIntoBatches` is an _aggregation_, all the elements in a batch _must_ fit into memory for each worker.\n",
         "\n",
-        "> ℹ️ `GroupIntoBatches` requires a `(key, value)` pair, for simplicity we key with `None` and discard it. Depending on your data, there might be a key that makes more senes. If you use a _balanced_ key (each key contains around the same number of elements), it might help to parallelize the batching process.\n",
+        "> ℹ️ `GroupIntoBatches` requires a `(key, value)` pair. For simplicity, this example uses a placeholder `None` key and discards it later. Depending on your data, there might be a key that makes more sense. Using a _balanced_ key, where each key contains around the same number of elements, may help parallelize the batching process.\n",
         "\n",
         "Lets create something similar to `WriteToText`, but to keep it simple, with a unique identifier in the file name instead of the file count."
       ]
