--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -678,7 +678,7 @@
         "\n",
         "The most straightforward way to write data would be to use a `Map` transform to write each element into our desired output format. In most cases, however, this would result in a lot of overhead creating, connecting to, and/or deleting resources.\n",
         "\n",
-        "Most data services are optimized to load _batches_ of elements at a time. This only has to connect to the service once, and it can the load many elements at a time.\n",
+        "Instead, most data services are optimized to load _batches_ of elements at a time. Batch writes only connects to the service once, and can load many elements at a time.\n",
         "\n",
         "Here, we discuss two common ways of batching the elements for optimized writes: _fixed-sized batches_, and\n",
         "_[windows](https://beam.apache.org/documentation/programming-guide/#windowing)\n",
