--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -701,7 +701,7 @@
         "\n",
         "> ℹ️ `GroupIntoBatches` requires a `(key, value)` pair. For simplicity, this example uses a placeholder `None` key and discards it later. Depending on your data, there might be a key that makes more sense. Using a _balanced_ key, where each key contains around the same number of elements, may help parallelize the batching process.\n",
         "\n",
-        "Lets create something similar to `WriteToText`, but to keep it simple, with a unique identifier in the file name instead of the file count."
+        "Let's create something similar to `WriteToText` but keep it simple with a unique identifier in the file name instead of the file count."
       ]
     },
     {
