Made input/output files explicit

--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -167,11 +167,11 @@
       "source": [
         "import apache_beam as beam\n",
         "\n",
-        "file_name = 'data/*.txt'\n",
+        "input_files = 'data/*.txt'\n",
         "with beam.Pipeline() as pipeline:\n",
         "  (\n",
         "      pipeline\n",
-        "      | 'Read files' >> beam.io.ReadFromText(file_name)\n",
+        "      | 'Read files' >> beam.io.ReadFromText(input_files)\n",
         "      | 'Print contents' >> beam.Map(print)\n",
         "  )"
       ],
@@ -211,7 +211,7 @@
       "source": [
         "import apache_beam as beam\n",
         "\n",
-        "file_name_prefix = 'outputs/file'\n",
+        "output_file_name_prefix = 'outputs/file'\n",
         "with beam.Pipeline() as pipeline:\n",
         "  (\n",
         "      pipeline\n",
@@ -222,7 +222,7 @@
         "          'The data might be written into multiple files.',\n",
         "      ])\n",
         "      | 'Write to files' >> beam.io.WriteToText(\n",
-        "          file_name_prefix,\n",
+        "          output_file_name_prefix,\n",
         "          file_name_suffix='.txt')\n",
         "  )"
       ],
@@ -446,11 +446,11 @@
         "        | 'Read CSV lines' >> beam.FlatMap(self.read_csv_lines)\n",
         "    )\n",
         "\n",
-        "file_patterns = ['data/*.csv']\n",
+        "input_files = ['data/*.csv']\n",
         "with beam.Pipeline() as pipeline:\n",
         "  (\n",
         "      pipeline\n",
-        "      | 'Read CSV files' >> ReadCsvFiles(file_patterns)\n",
+        "      | 'Read CSV files' >> ReadCsvFiles(input_files)\n",
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
@@ -745,7 +745,7 @@
         "        )\n",
         "    )\n",
         "\n",
-        "file_name_prefix = 'outputs/batch'\n",
+        "output_file_name_prefix = 'outputs/batch'\n",
         "with beam.Pipeline() as pipeline:\n",
         "  (\n",
         "      pipeline\n",
@@ -756,7 +756,7 @@
         "          'The data might be written into multiple files.',\n",
         "      ])\n",
         "      | 'Write batches to files' >> WriteBatchesToFiles(\n",
-        "          file_name_prefix,\n",
+        "          output_file_name_prefix,\n",
         "          file_name_suffix='.txt',\n",
         "          batch_size=3,\n",
         "      )\n",
@@ -863,7 +863,7 @@
         "        )\n",
         "    )\n",
         "\n",
-        "file_name_prefix = 'outputs/window'\n",
+        "output_file_name_prefix = 'outputs/window'\n",
         "window_size_sec = 5 * 60  # 5 minutes\n",
         "with beam.Pipeline() as pipeline:\n",
         "  (\n",
@@ -880,7 +880,7 @@
         "      | 'Fixed-sized windows' >> beam.WindowInto(\n",
         "            beam.window.FixedWindows(window_size_sec))\n",
         "      | 'Write windows to files' >> WriteWindowsToFiles(\n",
-        "          file_name_prefix,\n",
+        "          output_file_name_prefix,\n",
         "          file_name_suffix='.txt',\n",
         "      )\n",
         "  )"
