--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -680,7 +680,7 @@
         "\n",
         "Instead, most data services are optimized to load _batches_ of elements at a time. Batch writes only connects to the service once, and can load many elements at a time.\n",
         "\n",
-        "Here, we discuss two common ways of batching the elements for optimized writes: _fixed-sized batches_, and\n",
+        "Here, we discuss two common ways of batching elements for optimized writes: _fixed-sized batches_, and\n",
         "_[windows](https://beam.apache.org/documentation/programming-guide/#windowing)\n",
         "of elements_."
       ]
