minor formatting changes and rewording

--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -62,16 +62,18 @@
         "# Reading and writing data -- _Tour of Beam_\n",
         "\n",
         "So far we've learned some of the basic transforms like\n",
-        "[`Map`](https://beam.apache.org/documentation/transforms/python/elementwise/map) _(one-to-one)_,\n",
-        "[`FlatMap`](https://beam.apache.org/documentation/transforms/python/elementwise/flatmap) _(one-to-many)_,\n",
-        "[`Filter`](https://beam.apache.org/documentation/transforms/python/elementwise/filter) _(one-to-zero)_,\n",
-        "[`Combine`](https://beam.apache.org/documentation/transforms/python/aggregation/combineglobally) _(many-to-one)_, and\n",
+        "[`Map`](https://beam.apache.org/documentation/transforms/python/elementwise/map),\n",
+        "[`FlatMap`](https://beam.apache.org/documentation/transforms/python/elementwise/flatmap),\n",
+        "[`Filter`](https://beam.apache.org/documentation/transforms/python/elementwise/filter),\n",
+        "[`Combine`](https://beam.apache.org/documentation/transforms/python/aggregation/combineglobally), and\n",
         "[`GroupByKey`](https://beam.apache.org/documentation/transforms/python/aggregation/groupbykey).\n",
-        "These allow us to transform data in any way, but so far we've created data from an in-memory\n",
-        "[`iterable`](https://docs.python.org/3/glossary.html#term-iterable), like a `List`, using\n",
-        "[`Create`](https://beam.apache.org/documentation/transforms/python/other/create).\n",
+        "These allow us to transform data in any way, but so far we've used\n",
+        "[`Create`](https://beam.apache.org/documentation/transforms/python/other/create)\n",
+        "to get data from an in-memory\n",
+        "[`iterable`](https://docs.python.org/3/glossary.html#term-iterable), like a `list`.\n",
         "\n",
-        "This works well for experimenting with small datasets. For larger datasets we use a **`Source`** transform to read data and a **`Sink`** transform to write data.\n",
+        "This works well for experimenting with small datasets. For larger datasets we can use `Source` transforms to read data and `Sink` transforms to write data.\n",
+        "If there are no built-in `Source` or `Sink` transforms, we can also easily create our custom I/O transforms.\n",
         "\n",
         "Let's create some data files and see how we can read them in Beam."
       ]
@@ -408,7 +410,7 @@
       "source": [
         "## Example: Reading CSV files\n",
         "\n",
-        "Lets say we want to read CSV files get elements as `dict`s. We like how `ReadFromText` expands a file pattern, but we might want to allow for multiple patterns as well.\n",
+        "Lets say we want to read CSV files to get elements as Python dictionaries. We like how `ReadFromText` expands a file pattern, but we might want to allow for multiple patterns as well.\n",
         "\n",
         "We create a `ReadCsvFiles` transform, which takes a list of `file_patterns` as input. It expands all the `glob` patterns, and then, for each file name it reads each row as a `dict` using the\n",
         "[`csv.DictReader`](https://docs.python.org/3/library/csv.html#csv.DictReader) module."
@@ -446,11 +448,11 @@
         "        | 'Read CSV lines' >> beam.FlatMap(self.read_csv_lines)\n",
         "    )\n",
         "\n",
-        "input_files = ['data/*.csv']\n",
+        "input_patterns = ['data/*.csv']\n",
         "with beam.Pipeline() as pipeline:\n",
         "  (\n",
         "      pipeline\n",
-        "      | 'Read CSV files' >> ReadCsvFiles(input_files)\n",
+        "      | 'Read CSV files' >> ReadCsvFiles(input_patterns)\n",
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
