[BEAM-10937] Use FileSystems for IO

--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -15,16 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/apache/beam/blob/master/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
@@ -50,7 +40,7 @@
         "# specific language governing permissions and limitations\n",
         "# under the License."
       ],
-      "execution_count": 95,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -164,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDXdE9uysriw",
-        "outputId": "f5d58b5d-892a-4a42-89c5-b78f1d329cf3"
+        "outputId": "71b1409a-7b00-455f-e9ac-7dc712f278b2"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -177,7 +167,7 @@
         "      | 'Print contents' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 96,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,13 +228,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8au0yJSd1itt",
-        "outputId": "d7e72785-9fa8-4a2b-c6d0-4735aac8e206"
+        "outputId": "19e0c3d7-b431-402e-de2e-797a6dbf2970"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/file*.txt"
       ],
-      "execution_count": 98,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wR6WY6wOMVhb",
-        "outputId": "232e9fb3-4054-4eaf-9bd0-1adc4435b220"
+        "outputId": "52d16912-231a-4b3a-f6d1-2d3d077dc561"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -319,7 +309,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8iXqE1CRnn5",
-        "outputId": "019f3b32-74c5-4860-edee-1c8553f200bb"
+        "outputId": "62099471-8917-4caa-e080-11a479fbfc57"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -387,7 +377,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +403,16 @@
         "Lets say we want to read CSV files to get elements as Python dictionaries. We like how `ReadFromText` expands a file pattern, but we might want to allow for multiple patterns as well.\n",
         "\n",
         "We create a `ReadCsvFiles` transform, which takes a list of `file_patterns` as input. It expands all the `glob` patterns, and then, for each file name it reads each row as a `dict` using the\n",
-        "[`csv.DictReader`](https://docs.python.org/3/library/csv.html#csv.DictReader) module."
+        "[`csv.DictReader`](https://docs.python.org/3/library/csv.html#csv.DictReader) module.\n",
+        "\n",
+        "We could use the [`open`](https://docs.python.org/3/library/functions.html#open) function to open a local file, but Beam already supports several different file systems besides local files.\n",
+        "To leverage that, we can use the [`apache_beam.io.filesystems`](https://beam.apache.org/releases/pydoc/current/apache_beam.io.filesystems.html) module.\n",
+        "\n",
+        "> ℹ️ The [`open`](https://beam.apache.org/releases/pydoc/current/apache_beam.io.filesystems.html#apache_beam.io.filesystems.FileSystems.open)\n",
+        "> function from the Beam filesystem reads bytes,\n",
+        "> it's roughly equivalent to opening a file in `rb` mode.\n",
+        "> To write a file, you would use\n",
+        "> [`create`](https://beam.apache.org/releases/pydoc/current/apache_beam.io.filesystems.html#apache_beam.io.filesystems.FileSystems.open) instead."
       ]
     },
     {
@@ -423,10 +422,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywVbJxegaZbo",
-        "outputId": "5e0adfa3-e685-4fe0-b6b7-bfa3d8469da1"
+        "outputId": "057f1ad2-84e7-4613-ce49-3506fe29ae50"
       },
       "source": [
         "import apache_beam as beam\n",
+        "from apache_beam.io.filesystems import FileSystems as beam_fs\n",
+        "import codecs\n",
         "import csv\n",
         "import glob\n",
         "\n",
@@ -436,8 +437,10 @@
         "\n",
         "  @staticmethod\n",
         "  def read_csv_lines(file_name):\n",
-        "    with open(file_name, 'r') as f:\n",
-        "      for row in csv.DictReader(f):\n",
+        "    with beam_fs.open(file_name) as f:\n",
+        "      # Beam reads files as bytes, but csv expects strings,\n",
+        "      # so we need to decode the bytes into utf-8 strings.\n",
+        "      for row in csv.DictReader(codecs.iterdecode(f, 'utf-8')):\n",
         "        yield dict(row)\n",
         "\n",
         "  def expand(self, pcollection):\n",
@@ -456,7 +459,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 86,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +496,7 @@
         },
         "id": "EJ58A0AoV02o",
         "cellView": "form",
-        "outputId": "7025eb26-409d-4212-bd10-a3bccbb2679f"
+        "outputId": "7bc27cfb-905f-4092-eddd-2c9ced1393dd"
       },
       "source": [
         "#@title Creating the SQLite database\n",
@@ -532,7 +535,7 @@
         "  for row in cursor.fetchall():\n",
         "    print(row)"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +578,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bnpwqr-NV5DF",
-        "outputId": "b3cb7e46-222b-4e82-8f41-81098f54b7ab"
+        "outputId": "3a5a7762-0426-4136-888e-0ec1a404c4f2"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -624,7 +627,7 @@
         "      | 'Print rows' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +706,12 @@
         "\n",
         "> ℹ️ `GroupIntoBatches` requires a `(key, value)` pair. For simplicity, this example uses a placeholder `None` key and discards it later. Depending on your data, there might be a key that makes more sense. Using a _balanced_ key, where each key contains around the same number of elements, may help parallelize the batching process.\n",
         "\n",
-        "Let's create something similar to `WriteToText` but keep it simple with a unique identifier in the file name instead of the file count."
+        "Let's create something similar to `WriteToText` but keep it simple with a unique identifier in the file name instead of the file count.\n",
+        "\n",
+        "To write a file using the Beam `filesystems` module, we need to use [`create`](https://beam.apache.org/releases/pydoc/current/apache_beam.io.filesystems.html#apache_beam.io.filesystems.FileSystems.create), which writes `bytes` into the file.\n",
+        "\n",
+        "> ℹ️ To read a file instead, use the [`open`](https://beam.apache.org/releases/pydoc/current/apache_beam.io.filesystems.html#apache_beam.io.filesystems.FileSystems.open)\n",
+        "> function instead."
       ]
     },
     {
@@ -713,6 +721,7 @@
       },
       "source": [
         "import apache_beam as beam\n",
+        "from apache_beam.io.filesystems import FileSystems as beam_fs\n",
         "import glob\n",
         "import os\n",
         "import uuid\n",
@@ -726,9 +735,9 @@
         "  @staticmethod\n",
         "  def write_file(lines, file_name_prefix, file_name_suffix):\n",
         "    file_name = f\"{file_name_prefix}-{uuid.uuid4().hex}{file_name_suffix}\"\n",
-        "    with open(file_name, 'w') as f:\n",
+        "    with beam_fs.create(file_name) as f:\n",
         "      for line in lines:\n",
-        "        f.write(f\"{line}\\n\")\n",
+        "        f.write(f\"{line}\\n\".encode('utf-8'))\n",
         "\n",
         "  def expand(self, pcollection):\n",
         "    # Remove existing files matching the output file_name pattern.\n",
@@ -774,21 +783,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CUklk4JtEbft",
-        "outputId": "a2f25ae0-ed93-4d6a-ebee-376520ec8ae1"
+        "outputId": "b621621f-8977-4cc8-8621-f77fc315e297"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/batch*.txt"
       ],
-      "execution_count": 91,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "==> outputs/batch-92a6a79e31e34fb68db049b78e76b987.txt <==\n",
+            "==> outputs/batch-111904b6e0984769879bf3a0288089ef.txt <==\n",
             "The data might be written into multiple files.\n",
             "\n",
-            "==> outputs/batch-c6a8494e2a5146949f2a05918b36ee38.txt <==\n",
+            "==> outputs/batch-fa5e23fc4833447bbea0bf2a64adc700.txt <==\n",
             "Each element must be a string.\n",
             "It writes one element per line.\n",
             "There are no guarantees on the line order.\n"
@@ -822,6 +831,7 @@
       },
       "source": [
         "import apache_beam as beam\n",
+        "from apache_beam.io.filesystems import FileSystems as beam_fs\n",
         "import datetime\n",
         "import time\n",
         "\n",
@@ -847,10 +857,10 @@
         "    start_time = element['window_start'].time()\n",
         "    end_time = element['window_end'].time()\n",
         "    file_name = f\"{file_name_prefix}-{start_date}-{start_time}-{end_time}{file_name_suffix}\"\n",
-        "    with open(file_name, 'w') as f:\n",
+        "    with beam_fs.create(file_name) as f:\n",
         "      for event in element['events']:\n",
         "        event_time = datetime.datetime.fromtimestamp(event['timestamp'])\n",
-        "        f.write(f\"{event_time}: {event['event']}\\n\")\n",
+        "        f.write(f\"{event_time}: {event['event']}\\n\".encode('utf-8'))\n",
         "\n",
         "  def expand(self, pcollection):\n",
         "    return (\n",
@@ -887,7 +897,7 @@
         "      )\n",
         "  )"
       ],
-      "execution_count": 84,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -897,13 +907,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4QXKKVawTJ2_",
-        "outputId": "adbe9ad9-5521-4991-8483-7261f9918520"
+        "outputId": "0763e684-9827-46b7-f2a9-29b634b2b1d0"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/window*.txt"
       ],
-      "execution_count": 92,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
