--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -40,7 +40,7 @@
         "# specific language governing permissions and limitations\n",
         "# under the License."
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "# Create a directory for our data files.\n",
         "!mkdir -p data"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDXdE9uysriw",
-        "outputId": "71b1409a-7b00-455f-e9ac-7dc712f278b2"
+        "outputId": "030cf459-af95-4f1c-f6f5-3ee954c8f970"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -167,7 +167,7 @@
         "      | 'Print contents' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,13 +228,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8au0yJSd1itt",
-        "outputId": "19e0c3d7-b431-402e-de2e-797a6dbf2970"
+        "outputId": "56102670-d24d-4833-dcf0-833d7d546021"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/file*.txt"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wR6WY6wOMVhb",
-        "outputId": "52d16912-231a-4b3a-f6d1-2d3d077dc561"
+        "outputId": "ac3dfe89-5fc0-48ed-e867-f832b2b1bae9"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -309,7 +309,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8iXqE1CRnn5",
-        "outputId": "62099471-8917-4caa-e080-11a479fbfc57"
+        "outputId": "5c9fa281-1a05-4d20-ccdf-7899df6cc083"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -377,7 +377,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,18 +422,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywVbJxegaZbo",
-        "outputId": "057f1ad2-84e7-4613-ce49-3506fe29ae50"
+        "outputId": "042ee6be-d4d6-4983-9a7c-5f876ba0f655"
       },
       "source": [
         "import apache_beam as beam\n",
         "from apache_beam.io.filesystems import FileSystems as beam_fs\n",
         "import codecs\n",
         "import csv\n",
-        "import glob\n",
         "\n",
         "class ReadCsvFiles(beam.PTransform):\n",
         "  def __init__(self, file_patterns):\n",
         "    self.file_patterns = file_patterns\n",
+        "\n",
+        "  @staticmethod\n",
+        "  def expand_pattern(pattern):\n",
+        "    for match_result in beam_fs.match([pattern])[0].metadata_list:\n",
+        "      yield match_result.path\n",
         "\n",
         "  @staticmethod\n",
         "  def read_csv_lines(file_name):\n",
@@ -447,7 +451,7 @@
         "    return (\n",
         "        pcollection\n",
         "        | 'Create file patterns' >> beam.Create(self.file_patterns)\n",
-        "        | 'Expand file patterns' >> beam.FlatMap(glob.glob)\n",
+        "        | 'Expand file patterns' >> beam.FlatMap(self.expand_pattern)\n",
         "        | 'Read CSV lines' >> beam.FlatMap(self.read_csv_lines)\n",
         "    )\n",
         "\n",
@@ -459,7 +463,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +500,7 @@
         },
         "id": "EJ58A0AoV02o",
         "cellView": "form",
-        "outputId": "7bc27cfb-905f-4092-eddd-2c9ced1393dd"
+        "outputId": "311a721a-565f-4b9e-cf40-aafce766b1cf"
       },
       "source": [
         "#@title Creating the SQLite database\n",
@@ -535,7 +539,7 @@
         "  for row in cursor.fetchall():\n",
         "    print(row)"
       ],
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +582,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bnpwqr-NV5DF",
-        "outputId": "3a5a7762-0426-4136-888e-0ec1a404c4f2"
+        "outputId": "4a39f4b5-e66f-41b2-f728-56bf2c86c351"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -627,7 +631,7 @@
         "      | 'Print rows' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,12 +721,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LcRHXwyT8Rrj"
+        "id": "LcRHXwyT8Rrj",
+        "outputId": "64257b03-33b0-446d-d877-ae9148af5023",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import apache_beam as beam\n",
         "from apache_beam.io.filesystems import FileSystems as beam_fs\n",
-        "import glob\n",
         "import os\n",
         "import uuid\n",
         "\n",
@@ -733,6 +740,11 @@
         "    self.batch_size = batch_size\n",
         "\n",
         "  @staticmethod\n",
+        "  def expand_pattern(pattern):\n",
+        "    for match_result in beam_fs.match([pattern])[0].metadata_list:\n",
+        "      yield match_result.path\n",
+        "\n",
+        "  @staticmethod\n",
         "  def write_file(lines, file_name_prefix, file_name_suffix):\n",
         "    file_name = f\"{file_name_prefix}-{uuid.uuid4().hex}{file_name_suffix}\"\n",
         "    with beam_fs.create(file_name) as f:\n",
@@ -741,8 +753,8 @@
         "\n",
         "  def expand(self, pcollection):\n",
         "    # Remove existing files matching the output file_name pattern.\n",
-        "    for f in glob.glob(f\"{self.file_name_prefix}*{self.file_name_suffix}\"):\n",
-        "      os.remove(f)\n",
+        "    for path in self.expand_pattern(f\"{self.file_name_prefix}*{self.file_name_suffix}\"):\n",
+        "      os.remove(path)\n",
         "    return (\n",
         "        pcollection\n",
         "        # For simplicity we key with `None` and discard it.\n",
@@ -773,8 +785,17 @@
         "      )\n",
         "  )"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:34: FutureWarning: GroupIntoBatches is experimental.\n",
+            "WARNING:apache_beam.transforms.core:Key coder FastPrimitivesCoder for transform <ParDo(PTransform) label=[ParDo(_GroupIntoBatchesDoFn)]> with stateful DoFn may not be deterministic. This may cause incorrect behavior for complex key types. Consider adding an input type hint for this transform.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -783,24 +804,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CUklk4JtEbft",
-        "outputId": "b621621f-8977-4cc8-8621-f77fc315e297"
+        "outputId": "03343e21-eb23-4b71-a361-f0259dd553d0"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/batch*.txt"
       ],
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "==> outputs/batch-111904b6e0984769879bf3a0288089ef.txt <==\n",
-            "The data might be written into multiple files.\n",
-            "\n",
-            "==> outputs/batch-fa5e23fc4833447bbea0bf2a64adc700.txt <==\n",
+            "==> outputs/batch-d7d2e985660e40ae8752ec9e22e6550b.txt <==\n",
             "Each element must be a string.\n",
             "It writes one element per line.\n",
-            "There are no guarantees on the line order.\n"
+            "There are no guarantees on the line order.\n",
+            "\n",
+            "==> outputs/batch-ea92b92591bf4d92815e78aeaf1e9aed.txt <==\n",
+            "The data might be written into multiple files.\n"
           ],
           "name": "stdout"
         }
@@ -897,7 +918,7 @@
         "      )\n",
         "  )"
       ],
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -907,13 +928,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4QXKKVawTJ2_",
-        "outputId": "0763e684-9827-46b7-f2a9-29b634b2b1d0"
+        "outputId": "98abae93-8a4c-488d-fdf4-e8f7e78d7189"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/window*.txt"
       ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
