Add more type hints

--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -637,17 +637,17 @@
         "import apache_beam as beam\n",
         "from apache_beam.options.pipeline_options import PipelineOptions\n",
         "import sqlite3\n",
-        "from typing import List, Tuple\n",
+        "from typing import Iterable, List, Tuple\n",
         "\n",
         "class SQLiteSelect(beam.DoFn):\n",
-        "  def __init__(self, database_file):\n",
+        "  def __init__(self, database_file: str):\n",
         "    self.database_file = database_file\n",
         "    self.connection = None\n",
         "\n",
         "  def setup(self):\n",
         "    self.connection = sqlite3.connect(self.database_file)\n",
         "\n",
-        "  def process(self, query):\n",
+        "  def process(self, query: str) -> Iterable[Dict[str, str]]:\n",
         "    table, columns = query\n",
         "    cursor = self.connection.cursor()\n",
         "    cursor.execute(f\"SELECT {','.join(columns)} FROM {table}\")\n",
@@ -667,7 +667,6 @@
         "      | 'SQLite SELECT' >> beam.ParDo(SQLiteSelect(database_file))\n",
         "  )\n",
         "\n",
-        "database_file = 'moon-phases.db'\n",
         "queries = [\n",
         "    # (table_name, [column1, column2, ...])\n",
         "    ('moon_phases', ['phase_emoji', 'peak_datetime', 'phase']),\n",
